<?xml version="1.0" encoding="utf-8"?>
<resources>
    <color name="teal">#FF65B098</color>
    <color name="green">#2ecc71</color>
    <color name="red">#e74c3c</color>
    <string name="app_name">SkillCourt</string>
    <string name="action_settings">Settings</string>

    <!-- Welcome Activity -->
    <string name="log_in_button">LOG IN</string>
    <string name="guess_button">ENTER AS A GUEST</string>
    <string name="create_account_button">NEW USER</string>
    <string name="warning_guest_message">If you enter as a guest your performance data will not be stored. Do you want to continue as a guest?</string>
    <string name="warning_guest_positive">CONTINUE</string>
    <string name="warning_guest_negative">CANCEL</string>

    <!-- Home Activity -->

    <string name="title_activity_home">Home</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="skillCourt_header">SkillCourt</string>
    <string name="user_name">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login_button">LOGIN</string>
    <string name="login_trouble">TROUBLE LOGGING IN?</string>
    <string name="warning_uname_passw_combination_message">Username/Password combination is incorrect</string>
    <string name="warning_uname_passw_combination_possitive">OK</string>

    <!-- CreateAccount1 Activity -->
    <string name="title_activity_create_account1">CreateAccount1</string>
    <!-- <string name="username">USERNAME</string> Defined in Login -->
    <!-- <string name="password">Password</string>  Defined in Login -->
    <string name="email">EMAIL</string>
    <string name="next">NEXT</string>
    <string name="warning_empty_field_message">None of the fields in this screen can be left empty.</string>
    <string name="warning_empty_field_positive">OK</string>
    <string name="warning_username_exists_message">The username you selected is already being used by another SkillCourt user.</string>
    <string name="warning_username_exists_possitive">OK</string>
    <string name="warning_connection_error_message">Skillcourt is experiencing a connection error. Check your internet connection and try again.</string>
    <string name="warning_connection_error_possitive">OK</string>
    <string name="title_activity_create_account2">CreateAccount2</string>
    <string name="warning_email_exists_message">The email you selected is already being used by another SkillCourt user.</string>
    <string name="warning_email_exists_positive">OK</string>

    <!-- CreateAccount2 Activity -->
    <string name="verify_email_text_field">A 5 digits confirmation code has been sent to the email address provided. Please enter the code.</string>
    <string name="verify_hint">Enter Your Code Here</string>
    <string name="verify_button">Verify</string>
    <string name="change_email_button">Change Email</string>
    <string name="warning_invalid_code_message">Invalid Code</string>
    <string name="warning_invalid_code_possitive">OK</string>

    <!-- CreateAccount3 Activity -->
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <!-- <string name="next">NEXT</string> Defined in CreateAccount1 -->
    <string name="skip">SKIP</string>
    <string name="title_activity_create_account3">CreateAccount3</string>
    <string name="hello_world">Hello world!</string>

    <!-- CreateAccount4 Activity -->
    <string name="title_activity_create_account4">CreateAccount4</string>
    <string name="field_position">Playing Position</string>
    <string name="coach_username">Coach Username</string>
    <!--
    <string name="warning_connection_error_message">Skillcourt is experiencing a connection error. Check your internet connection and try again.</string>
    <string name="warning_connection_error_possitive">OK</string>
     Defined in CreateAccount1
    -->


    <!-- CreateAccount5 Activity -->
    <string name="title_activity_create_account5">CreateAccount5</string>
    <string name="go_to_log_in_screen">Go To Login</string>
    <string name="go_to_welcome">Go To Welcome Screen</string>
    <string name="account_created_message">your account has been successfully created</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_scan">Scan</string>
    <string name="title_activity_edit_profile_information">EditProfileInformation</string>
    <string name="title_activity_edit_password">EditPassword</string>

    <!--Profile Activity-->

    <!--Play Activity-->
    <string name="remove_wall">Remove Wall</string>
    <string name="play_by">Play by:</string>
    <string name="rounds">rounds</string>
    <string name="minutes">minutes</string>
    <string name="time">Time</string>
    <string name="cap_rounds">Rounds</string>
    <string name="sk_routines">SkillCourt Routines</string>
    <string name="time_per_rounds">Time Per Round:</string>

    <string name="empty"></string>

    <string name="choose_the_difficulty">Choose the Difficulty:</string>
    <string name="advanced">Advanced</string>
    <string name="intermediate">Intermediate</string>
    <string name="novice">Novice</string>

    <string name="routine_description_default">
        Select a routine above for its description...
    </string>
    <string name="play_routine_button">
        Play!
    </string>
    <string name="three_wall_desc">
        Your target is one of three walls! Try to keep up!
    </string>
    <string name="chase_desc">
        Chase the green light around the room while avoiding the red ones!
    </string>
    <string name="fly_desc">
        Your targets are in the air this time!  Aim high to hit your target.
    </string>
    <string name="ground_chase_desc">
        Dribble towards the green light for the next one to appear! Stay off red lights!
    </string>
    <string name="home_chase_desc">
        Activate the floor target and then chase the green light around the room while avoiding the red ones!
    </string>
    <string name="home_fly_desc">
        Activate the floor target and then look up! Your targets are in the air this time so fly the ball high.
    </string>
    <string name="xcue_desc">
        Activate the two floor targets and anticipate the wall targets using the yellow lights. When they become green, fly the ball high!
    </string>

    <string name="title_activity_display_stats">DisplayStats</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="choose_a_routine">Choose a Routine:</string>
    <string-array name="routine_array">
        <item>Three Wall Chase</item>
        <item>Chase</item>
        <item>Fly</item>
        <item>Home Chase</item>
        <item>Home Fly</item>
        <item>Ground Chase</item>
        <item>xCue</item>
    </string-array>

    <string-array name="routine_codes">
        <item>t</item>
        <item>c</item>
        <item>h</item>
        <item>g</item>
        <item>j</item>
        <item>m</item>
        <item>x</item>
    </string-array>

    <string-array name="wall_to_remove_array">
        <item>North</item>
        <item>East</item>
        <item>South</item>
        <item>West</item>
    </string-array>

    <!-- activity_feedback -->
    <string name="skillcourt_statistics">SkillCourt Statistics</string>
    <string name="successes">Successes: </string>
    <string name="minus_points">Minus Points: </string>
    <string name="misses">Misses: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="average_force">Average Force: </string>
    <string name="ar_shot_time">AR Shot Time: </string>
    <string name="ar_dribble_time">AR Dribbling Time: </string>
    <string name="xprs_speed">xPRS Speed: </string>
    <string name="stop">Stop!</string>
    <string name="percent"> %</string>
    <string name="newtons"> N</string>
    <string name="seconds"> seconds</string>
</resources>
