<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.seniorproject.skillcourt.CreateAccount3">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="top"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:id="@+id/first_name"
        android:hint="@string/first_name"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="top"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:id="@+id/last_name"
        android:hint="@string/last_name"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="top"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:id="@+id/date_of_birdth"
        android:hint="@string/date_of_birth"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:onClick="next"
        android:text="@string/next"
        android:layout_weight="0.5"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:onClick="skip"
        android:text="@string/skip"
        android:layout_weight="0.5"
        android:layout_marginLeft="10dp"/>

    </LinearLayout>





    </LinearLayout>

</RelativeLayout>
