<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seniorproject.skillcourt.CreateAccount1"
    android:nestedScrollingEnabled="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#FF65B098">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:text="@string/skillCourt_header"
            android:textStyle="bold|italic"
            android:textSize="50dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/innergrayborder"
            android:padding="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="5dp"
                android:id="@+id/user_name"
                android:hint="@string/user_name"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:id="@+id/email"
                android:hint="@string/email"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:onClick="next"
                android:background="@drawable/bluerectbutton"
                android:text="@string/next"
                android:textColor="#ff447767"
                android:textStyle="bold"
                android:textSize="20dp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
