<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.seniorproject.skillcourt.CreateAccount2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="top"
            android:text="@string/verify_email_text_field"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/verify_hint"
                android:id="@+id/code"
                android:layout_weight="0.4"
                android:inputType="number"/>


            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.6"
                android:layout_marginLeft="10dp"
                android:text="@string/verify_button"
                android:onClick="verify"/>


        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/change_email_button"
            android:onClick="changeEmail"/>



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="top"
            android:textColor="#FF0000"
            android:id="@+id/provitional_text"
            android:text=""/>


    </LinearLayout>

</RelativeLayout>
